--- a/galaxy.yml
+++ b/galaxy.yml
@@ -17,18 +17,19 @@ readme: README.md
 # A list of the collection's content authors. Can be just the name or in the format 'Full Name <email> (url)
 # @nicks:irc/im.site#channel'
 authors:
-- Adrian Van Katwyk
+- Adrian Van Katwyk (@avankatwyk)
+- Matt Witmer (@mattwitt)
 
 
 ### OPTIONAL but strongly recommended
 
 # A short summary description of the collection
-description: Ansible Network Collection for Opengear OM devices.
+description: Ansible Network Collection for Opengear OM & CM8100 devices.
 
 # Either a single license or a list of licenses for content inside of a collection. Ansible Galaxy currently only
 # accepts L(SPDX,https://spdx.org/licenses/) licenses. This key is mutually exclusive with 'license_file'
 license:
-- GPL-2.0-or-later
+- GPL-3.0-or-later
 
 # The path to the license file for the collection. This path is relative to the root of the collection. This key is
 # mutually exclusive with 'license'
@@ -55,3 +56,6 @@ repository: https://github.com/opengear/opengear.om
 
 # The URL to the collection issue tracker
 # issues: http://example.com/issue/tracker
+
+build_ignore:
+- test/unit
