--- a/playbooks/services_config.yaml
+++ b/playbooks/services_config.yaml
@@ -1,16 +1,15 @@
 ---
 
-- hosts: ngcsdevices
-  collections:
-    - opengear_om
+- name: Configure services
+  hosts: all
   connection: httpapi
   tasks:
     - name: Add Google NTP server
       opengear.om.om_services:
         config:
           ntp:
-            enabled: yes
+            enabled: true
             servers:
-            - value: au.pool.ntp.org
+              - value: au.pool.ntp.org
         state:
           replaced
