--- a/playbooks/user_config.yaml
+++ b/playbooks/user_config.yaml
@@ -1,21 +1,20 @@
 ---
 
-- hosts: ngcsdevices
-  collections:
-    - opengear_om
+- name: User configuration
+  hosts: all
   connection: httpapi
-  gather_facts: no
+  gather_facts: true
   tasks:
     - name: Add user
       opengear.om.om_users:
         config:
-        - username: test1
-          enabled: no
-          no_password: yes
-          description: This user was changed.
-        - username: test3
-          enabled: yes
-          no_password: yes
-          description: This user was added.
+          - username: test1
+            enabled: false
+            no_password: true
+            description: This user was changed.
+          - username: test3
+            enabled: true
+            no_password: true
+            description: This user was added.
         state:
           overridden
